argocd-resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - host: argocd.app.a14n.net
      http:
        paths:
        - backend:
            service:
              name: argocd-server
              port:
                name: https
          path: /
          pathType: Prefix
  tls:
    - hosts:
        - argocd.app.a14n.net
      secretName: argocd-secret # do not change, this is provided by Argo CD
